--- a/simplebank/Makefile
+++ b/simplebank/Makefile
@@ -8,5 +8,7 @@ migrateup:
 	migrate -path db/migration -database "postgresql://shuaiqingluo:mysecretpassword@localhost:5432/simple_bank?sslmode=disable" -verbose up
 migratedown:
 	migrate -path db/migration -database "postgresql://shuaiqingluo:mysecretpassword@localhost:5432/simple_bank?sslmode=disable" -verbose down
+sqlc:
+	sqlc generate
 .PHONY:
-	postgres createdb dropdb migrateup migratedown
+	postgres createdb dropdb migrateup migratedown sqlc
